technitium/templates/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: technitium
spec:
  selector:
    matchLabels:
      app: technitium
  replicas: 1
  template:
    metadata:
      labels:
        app: technitium
    spec:
      containers:
        - name: technitium
          image: technitium/dns-server:13.5.0
          volumeMounts:
            - name: technitium-volume
              mountPath: /etc/dns
      volumes:
        - name: technitium-volume
          persistentVolumeClaim:
            claimName: technitium-pvc
