technitium/templates/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: technitium-loadbalancer
spec:
  ports:
    - name: technitium-udp
      port: 53
      targetPort: 53
      protocol: UDP
    - name: technitium-tcp
      port: 53
      targetPort: 53
      protocol: TCP
    - name: technitium-http
      port: 5380
      targetPort: 5380
      protocol: TCP
  selector:
    app: technitium
  type: LoadBalancer
