technitium/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: technitium-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  tls:
  - hosts:
    - dns.harpo.me
    secretName: technitium-tls-production
  rules:
  - host: dns.harpo.me
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: technitium-loadbalancer
            port:
              number: 5380
